--- a/html/eventCreation.html
+++ b/html/eventCreation.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         
-        <a href="../html/home.html"><img src="../src/logo.png" alt=""></a>
+        <a href="../html/index.html"><img src="../src/logo.png" alt=""></a>
     
     <div id="rightSide">
         <div class="links">
