--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- Link para a página principal, com a imagem do logo -->
-        <a href="../html/home.html"><img src="../src/logo.png" alt=""></a>
+        <a href="../html/index.html"><img src="../src/logo.png" alt=""></a>
         
         <div id="rightHeaderSide">
             <!-- Seção com os links de navegação -->
