--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="/css/register.css">
     <title>Hubfy - Register</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
     
     <main>
         <div class="logo-container">
-            <img src="../src/logo2.png" alt="">
+            <img src="/src/logo2.png" alt="">
         </div>
 
         <form id="registerForm" enctype="multipart/form-data">
@@ -39,6 +39,6 @@
         <div id="message"></div>
     </main>
 
-    <script src="../js/register.js"></script>
+    <script src="/js/register.js"></script>
 </body>
 </html>
