--- a/html/eventCreation.html
+++ b/html/eventCreation.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Evento - Hubfy</title>
-    <link rel="stylesheet" href="../css/eventCreation.css">
+    <link rel="stylesheet" href="/css/eventCreation.css">
 </head>
 <body>
     <header>
         
-        <a href="../html/index.html"><img src="../src/logo.png" alt=""></a>
+        <a href="/html/index.html"><img src="/src/logo.png" alt=""></a>
     
     <div id="rightSide">
         <div class="links">
-            <img src="../src/adicionar.png" alt="">
-            <a href="../html/eventCreation.html">Criar Evento</a>
+            <img src="/src/adicionar.png" alt="">
+            <a href="/html/eventCreation.html">Criar Evento</a>
         </div>
         <div class="links">
-            <img src="../src/evento.png" alt="">
-            <a href="../html/user.html">Seus Eventos</a>
+            <img src="/src/evento.png" alt="">
+            <a href="/html/user.html">Seus Eventos</a>
         </div>
         <div class="links">
-            <img src="../src/perfil.png" alt="">
+            <img src="/src/perfil.png" alt="">
             <a id="link" href=''>Perfil</a>
         </div>
     </div>
@@ -236,6 +236,6 @@
         });
     </script>
 
-    <script src="../js/eventCreation.js"></script>
+    <script src="/js/eventCreation.js"></script>
 </body>
 </html>
