--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Link para o arquivo CSS que define o estilo da página -->
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     
     <!-- Título da página exibido na aba do navegador -->
     <title>Hubfy - Eventos</title>
@@ -104,6 +104,6 @@
     <div id="message"></div>
 
     <!-- Link para o arquivo JavaScript que contém as funcionalidades da página -->
-    <script src="/js/home.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
