--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="login.css">
     <title>Hubfy - Login</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M50 0C22.4 0 0 22.4 0 50s22.4 50 50 50 50-22.4 50-50S77.6 0 50 0zm0 80c-16.6 0-30-13.4-30-30s13.4-30 30-30 30 13.4 30 30-13.4 30-30 30z' fill='%236366f1'/%3E%3C/svg%3E">
 </head>
@@ -12,7 +12,7 @@
     <main>
         <!-- Adicionando a logo e o texto -->
         <div class="logo-container">
-            <img src="/src/logo2.png" alt="">
+            <img src="logo2.png" alt="">
         </div>
 
 
@@ -24,11 +24,11 @@
         </form>
 
         <div id="loginFormFooter">
-            <a href="./register.html">Registrar</a>
+            <a href="register.html">Registrar</a>
         </div>
 
         <div id="message"></div>
     </main>
-    <script src="/js/login.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
