--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- Link para a página principal, com a imagem do logo -->
-        <a href="home.html"><img src="logo.png" alt=""></a>
+        <a href="index.html"><img src="logo.png" alt=""></a>
         
         <div id="rightHeaderSide">
             <!-- Seção com os links de navegação -->
